fixed broken css on notification page

--- a/src/app/components/core/notifications/notification-service-modal/notification-service-modal.component.css
+++ b/src/app/components/core/notifications/notification-service-modal/notification-service-modal.component.css
@@ -47,6 +47,4 @@ hr {
   margin-top: 7px;
 }
 
-.enable-div {
-  margin: 1.5rem 1rem;
-}
+
